--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,19 @@
 
+.week{
+    border-radius: 5px;
+    background-color: #8BB148;
+    padding: 5px;
+    height: 60px;
+}
+.month{
+    border-radius: 5px;
+    background-color: #FFD047; 
+    padding: 5px;
+    height: 60px;
+}
+.day{
+    border-radius: 5px;
+    background-color: #E45F5F; 
+    padding: 5px;
+    height: 60px;
+}
