--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,3 +17,42 @@
     padding: 5px;
     height: 60px;
 }
+.parent x{ width: 250px; height:125px;}
+
+.header {
+    height: 150px;
+    width: auto;
+    color:#1A66B4;
+    background-color:#8BB148;
+    font-weight: bold;
+    font-size: 20px;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+    -webkit-transition-property: width height background-color font-size font-weight left top color;
+    -webkit-transition-duration: 4s;
+    -webkit-transition-timing-function: ease;
+    transition-property: width height background-color font-size font-weight left top color;
+    transition-duration: 4s;
+    transition-timing-function: ease;
+    transition-delay: 2s;
+
+}
+.header1{
+    width: 100px;
+    height: 50px;
+    color: yellow;
+    background-color:#E45F5F;
+    font-weight: bold;
+    font-size: 18px;
+    left: 400px;
+    top: 25px;
+    position:absolute;
+    -webkit-transition-property: width height background-color font-size font-weight left top color;
+    -webkit-transition-duration: 4s;
+    -webkit-transition-timing-function: ease;
+    transition-property: width height background-color font-size font-weight left top color;
+    transition-duration: 4s;
+    transition-delay: 2s;
+    transition-timing-function: ease;
+}
